# rust_api

./: Cargo.toml  README.md
src/: auth.rs  main.rs  models.rs  routes.rs
