[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }
jsonwebtoken = "8.0"
bcrypt = "0.10"
